@@ -102,6 +102,11 @@ Release 0.10.1 - 2007-01-10
 13. HADOOP-879.  Fix InputFormatBase to handle output generated by
     MapFileOutputFormat.  (cutting)
 
+14. HADOOP-659.  In HDFS, prioritize replication of blocks based on
+    current replication level.  Blocks which are severely
+    under-replicated should be further replicated before blocks which
+    are less under-replicated.  (Hairong Kuang via cutting)
+
 
 Release 0.10.0 - 2007-01-05
 
